# procesing_mif_files

./: .gitignore  ContentReplacer.py  ContentVariableReplacer.py  EJ_41416056_DA_01.mif  README.md  _EJ_41416056_DA_01.mif  admin.bat  content_processor.py  controller.py  file_handler.py  file_processor.py  generate_skeleton.py  json_rule_loader.py  languageCodeDetector.py  logs_admin.py  main.py  prepred_EJ_41416056_DA_01.mif  processing_logger.py  pyproject.toml  replacements.py  requirements.txt  rule_admin.py  run.bat  schindler.bat  settings.json  settings.py  signalWords.py  test_settings.py  user_interaction.py  user_interface.py  variable_replacer.py  views.py
_skeleton/: project_skeleton.txt
exampleFile/: EJ_41416056_PL_01.mif  EJ_41416056_PL_01_processed.mif  _EJ_41416056_DA_01.mif  ___EJ_41416056_DA_01.mif  processed_EJ_41416056_DA_01.mif  processed_EJ_41416056_PL_01.mif
logs/: 2026-05-19T14-55-16__K_46015496_HE_09.mif.json  index.json
rules/: cleanup_rules.json  custom_rules.json  table_rules.json  variable_rules.json
settings/: __init__.py  settings.json  settings_console_Interface  settings_console_Interface.py  settings_manager.py
