[tool.poetry]
name = "mif-schindler"
version = "0.1.0"
description = "processing mif files for DTP"
authors = ["Stefan Opalinskyi <szewnin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
my-script = 'schindler:main'
